# NIER

./: .gitignore  CMakeLists.txt  README.md
assets/: camera.html  dashboard.html  dashboardScript.js  dashboardStyle.css  login.html  temperatureHumidityGraph.js  test.html
assets/icons/: site.webmanifest
assets/static/: login.html  style.css  test.html
config/: lighttpd.conf.def  mosquitto.conf  mosquitto.conf.def
keys/: keys.psk  test.psk
scripts/: start_mosquitto.sh  start_server.sh
src/ESP-NIER/: CMakeLists.txt
src/ESP-NIER/main/: main.c
src/ESP-NIER/smartSwitch/: CMakeLists.txt
src/ESP-NIER/smartSwitch/main/: main.c
src/ESP-NIER/vscode-template/: settings.json
src/RASPB-NIER/: .gitignore  CMakeLists.txt  NIER.c  NIER.h  database.sqlite3  main.c  nier  responses.c  responses.h  statements.c  statements.h
src/RASPB-NIER/deamon-backend/: main.c
src/RASPB-NIER/quick-apps/: relay.c  test.c
src/RASPB-NIER/web_root/: login.html  test.html
